# xpress

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
crates/xpress-cli/: Cargo.toml
crates/xpress-cli/src/: main.rs  progress.rs  render.rs  watch.rs
crates/xpress-core/: Cargo.toml
crates/xpress-core/src/: audio.rs  budget.rs  bundled.rs  clipboard.rs  compression.rs  config.rs  crop.rs  effects.rs  filetype.rs  image.rs  lib.rs  pdf.rs  pipeline.rs  result.rs  scale.rs  store.rs  template.rs  tools.rs  update.rs  video.rs
crates/xpress-core/tests/: integration.rs  timeout.rs
crates/xpress-core/tests/common/: mod.rs
crates/xpress-gui/: Cargo.toml
crates/xpress-gui/src/: app.rs  main.rs  work.rs
docs/: README.md  architecture.md  cli.md  contributing.md  daemon.md  gui.md  installation.md  integrations.md  pipelines.md  signing.md
scripts/: fetch-static-tools.sh  fetch-tools.sh  make-app.sh  make-dmg.sh  notarize.sh
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
