[workspace]
resolver = "2"
members = [
    "crates/xpress-core",
    "crates/xpress-cli",
    "crates/xpress-gui",
]
exclude = ["tools/icon-gen"]

[workspace.package]
version = "0.4.6"
edition = "2021"
rust-version = "1.87"
license = "MIT"
authors = ["Knut W. Horne <https://kwhorne.com>"]
repository = "https://github.com/kwhorne/xpress"
description = "Image, video, PDF and audio optimiser — an independent Rust tool"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
which = "7"
walkdir = "2"
rayon = "1"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"
