[package]
name = "xpress-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for xpress"

[[bin]]
name = "xpress"
path = "src/main.rs"

[dependencies]
xpress-core = { path = "../xpress-core" }
anyhow.workspace = true
clap.workspace = true
clap_complete = "4"
clap_mangen = "0.2"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
serde_json.workspace = true
rayon.workspace = true
notify = "7"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
arboard = { version = "3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }

[features]
default = ["clipboard"]
# Embed vendored binaries into the `xpress` executable (see xpress-core).
embed-tools = ["xpress-core/embed-tools"]
# Clipboard watching (pulls in arboard + platform GUI libraries).
clipboard = ["dep:arboard"]
