[package]
name = "xpress-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core optimisation engine for xpress"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
which.workspace = true
walkdir.workspace = true
rayon.workspace = true
num_cpus.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tempfile.workspace = true
imagesize = "0.13"
lopdf = { version = "0.36", default-features = false }
ureq = "2"
# Pure-Rust image engine (no external binaries needed for images).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
imagequant = "4"
png = "0.17"
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
lopdf = { version = "0.36", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }

[features]
# Embed the binaries under `vendor/bin/<target>/` into the executable and extract
# them to the per-user bundle dir on first run. Off by default so the crate
# builds without any vendored binaries present.
embed-tools = ["dep:include_dir"]
