[package]
name = "xpress-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop GUI for xpress — floating results, drag-and-drop, global hotkeys"

[[bin]]
name = "xpress-gui"
path = "src/main.rs"

[dependencies]
xpress-core = { path = "../xpress-core" }
anyhow.workspace = true
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
global-hotkey = "0.6"
arboard = "3"
rfd = "0.15"
tray-icon = "0.19"
